# DPSim

./: .gitignore  CMakeLists.txt  DPSim.cxx  Doxyfile  README.md  setup.sh
analysis_example/: analysis_example.C
conf/: DP.lut  DY.lut  example.conf  pythia8_DY.cfg  pythia8_inclusive.cfg  trigger.table
conf/geometry/: GDMLUtil.py  geometry_ver1.sql
exe/: DPSim.cxx
geometry/: GDMLUtil.py  gdmlWriter.py  geometry_ver1.sql
inc/: DPDetectorConstruction.h  DPDigitizer.h  DPDummyRecon.h  DPEventAction.h  DPFieldMap.h  DPIOManager.h  DPMCRawEvent.h  DPMCRawEventLinkDef.h  DPMagField.h  DPPrimaryGeneratorAction.h  DPRunAction.h  DPSensitiveDetector.h  DPSimConfig.h  DPSimConfigLinkDef.h  DPSteppingAction.h  DPTrackingAction.h  DPTriggerAnalyzer.h  DPVertexGenerator.h  DPVirtualHit.h
scripts/: DPSimJobConf.py  compile  confGen.py  runDPSim.py
src/: DPDetectorConstruction.cxx  DPDigitizer.cxx  DPDummyRecon.cxx  DPEventAction.cxx  DPFieldMap.cxx  DPIOManager.cxx  DPMCRawEvent.cxx  DPMagField.cxx  DPPrimaryGeneratorAction.cxx  DPRunAction.cxx  DPSensitiveDetector.cxx  DPSimConfig.cxx  DPSteppingAction.cxx  DPTrackingAction.cxx  DPTriggerAnalyzer.cxx  DPVertexGenerator.cxx  DPVirtualHit.cxx
tools/fastmc/: fastmc.py
tools/trigAna/: anaRoad.cxx  lv2vhdGen.py  mappingGen.py  ntuple2road.cxx  raw2ntuple.cxx
